[build-system]
requires = ["hatchling>=1.29"]
build-backend = "hatchling.build"

[project]
name = "lacme"
version = "1.0.0"
description = "Modern, async-native Python ACME client library for embedding TLS certificate automation."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [{ name = "Turnstone Labs" }]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Security :: Cryptography",
    "Typing :: Typed",
]

dependencies = [
    "httpx>=0.27",
    "cryptography>=43",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "hypothesis>=6.100",
    "anyio>=4.0",
]
aws = ["boto3>=1.34"]
starlette = [
    "starlette>=0.27",
]
fastapi = [
    "fastapi>=0.100",
]
prometheus = [
    "prometheus-client>=0.20",
]
docs = [
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.24",
    "mkdocs-gen-files>=0.5",
    "mkdocs-literate-nav>=0.6",
]

[project.scripts]
lacme = "lacme.cli:main"

[project.urls]
Homepage = "https://github.com/turnstonelabs/lacme"
Repository = "https://github.com/turnstonelabs/lacme"
Issues = "https://github.com/turnstonelabs/lacme/issues"

# ---------------------------------------------------------------------------
# Tools
# ---------------------------------------------------------------------------

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "TCH"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = ["lacme.ext_fastapi", "lacme.starlette"]
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = ["fastapi", "fastapi.*", "starlette", "starlette.*", "prometheus_client", "prometheus_client.*", "boto3", "boto3.*"]
ignore_missing_imports = true

[tool.coverage.run]
source = ["lacme"]
branch = true

[tool.coverage.report]
show_missing = true
skip_empty = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING",
    "raise NotImplementedError",
    'if __name__ == "__main__"',
]

[dependency-groups]
dev = []
